Updates for revoking claimant solicitor